--- a/packages/single-price-grid-component/src/index.scss
+++ b/packages/single-price-grid-component/src/index.scss
@@ -27,6 +27,8 @@ html {
   font-family: 'Karla', serif;
   font-weight: 400;
   font-size: $basic-font-size;
+  background-color: hsl(237, 18%, 78%);
+  box-sizing: border-box;
 }
 
 li {
@@ -36,29 +38,33 @@ li {
 .container {
   display: flex;
   flex-wrap: wrap;
-  width: 630px;
   align-self: center;
+  width: 630px;
   margin: auto;
 }
 
 .card {
+  width: 100%;
+  height: 215px;
   margin: auto;
+  box-sizing: border-box;
+  padding: 25px 40px;
 }
 
 .card-description {
-  width: 100%;
-  height: 210px;
+  background-color: rgba(255, 255, 255, 1);
+  line-height: 1.6;
 }
 
 .card-price {
   width: 50%;
-  height: 250px;
   background-color: $cyan-color;
+  height: 260px;
 }
 
 .card-contact {
   width: 50%;
-  height: 250px;
+  height: 260px;
   background-color: $light-cyan-color;
 }
 
@@ -66,6 +72,11 @@ li {
   .container {
     width: 310px;
   }
+
+  .card {
+    padding: 5px 20px;
+  }
+
   .card-description {
     width: 310px;
     height: 270px;
@@ -106,14 +117,22 @@ li {
 .price-number {
   color: white;
   font-size: 30px;
+  margin-right: 10px;
 }
 
 .price-content {
   color: rgba(229, 239, 245, 0.5);
+  display: flex;
+  align-items: center;
 }
 
 .price-description {
   color: rgba(255, 255, 255, 0.8);
+  font-size: 15px;
+}
+
+.card-price-wrapper {
+  margin-bottom: 30px;
 }
 
 .btn {
@@ -121,9 +140,11 @@ li {
   margin: auto;
   background-color: $bright-yellow;
   color: white;
-  width: 90%;
+  width: 100%;
+  border: none;
   border-radius: 5px;
   height: 50px;
+  box-shadow: 2px 2px rgba(0,0,0,0.05);
 }
 
 .contact-title {
@@ -132,5 +153,6 @@ li {
 
 .contact-list {
   color: rgba(229, 239, 245, 0.8);
-
+  padding: 0;
+  line-height: 1.4;
 }
